<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".controller.EditCellarActivity"
    android:theme="@style/EditorTheme">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <TextView
                android:id="@+id/activity_edit_cellar_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_edit_cellar_new_entry"
                android:textSize="20sp"
                android:paddingBottom="@dimen/padding_normal"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appellation"/>

            <AutoCompleteTextView
                android:id="@+id/activity_edit_cellar_appellation_ACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_edit_cellar_hint_appellation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain"/>

            <AutoCompleteTextView
                android:id="@+id/activity_edit_cellar_domain_ACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_edit_cellar_hint_domain"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuvee"/>

            <AutoCompleteTextView
                android:id="@+id/activity_edit_cellar_cuvee_ACTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_edit_cellar_hint_cuvee"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_type"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/activity_edit_cellar_red_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/wine_red"/>
                <RadioButton
                    android:id="@+id/activity_edit_cellar_white_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wine_white"/>
                <RadioButton
                    android:id="@+id/activity_edit_cellar_pink_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wine_pink"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vintage"/>

            <EditText
                android:id="@+id/activity_edit_cellar_vintage_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="2010"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_cellar_capacity"/>

                <Spinner
                    android:id="@+id/activity_edit_cellar_capacity_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/CapacityValues"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_comment"/>

            <EditText
                android:id="@+id/activity_edit_cellar_bottle_comment_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/activity_edit_cellar_hint_wine_comment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"/>

            <EditText
                android:id="@+id/activity_edit_cellar_origin_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/activity_edit_cellar_hint_origin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_cellar_stock"/>
                <EditText
                    android:id="@+id/activity_edit_cellar_stock_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellar_comment"/>

            <EditText
                android:id="@+id/activity_edit_cellar_cellar_comment_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/activity_edit_cellar_hint_cellar_comment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/activity_edit_cellar_storage_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/storage"/>

                    <Button
                        android:id="@+id/activity_edit_cellar_camera_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"/>

                    <Button
                        android:id="@+id/activity_edit_cellar_delete_photo_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_photo"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/activity_edit_cellar_photo_image"
                        android:layout_width="@dimen/recyclerview_cellar_row_photo_width"
                        android:layout_height="@dimen/recyclerview_cellar_row_photo_height"
                        android:src="@drawable/photo_frame"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/activity_edit_cellar_ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"/>
                <Button
                    android:id="@+id/activity_edit_cellar_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
